--- a/style.css
+++ b/style.css
@@ -52,12 +52,8 @@ nav{
     background: #9F6496;
     z-index: 100;
 }
-nav .logo h1{
-    font-family: Waylimo;
-    font-size: 38px;
-    letter-spacing: 8px;    
-    color: #ffffff;
-    font-weight: 400;
+nav .logo img{
+    width: 200px;
 }
 .logo a{
     text-decoration: none;
@@ -562,20 +558,16 @@ main{
 
 footer{
     width: 100vw;
-    height: 300px;
+    height: 400px;
     text-align: center;
     display: flex; 
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
 }
-footer h1{
-    margin-top: 20px;
-    color: #0c0420;
-    font-family: Waylimo;
-    font-size: 38px;
-    letter-spacing: 8px;    
-    font-weight: 400;
+footer img{ 
+    margin-top: 40px;
+    width: 250px;
 }
 footer .footer-links{
     width: 90%;
