--- a/style.css
+++ b/style.css
@@ -52,8 +52,10 @@ nav{
     background: #9F6496;
     z-index: 100;
 }
-nav .logo img{
-    width: 200px;
+nav .logo h1{
+    font-size: 35px;
+    font-family: Waylimo;
+    letter-spacing: 8px;
 }
 .logo a{
     text-decoration: none;
@@ -558,16 +560,22 @@ main{
 
 footer{
     width: 100vw;
-    height: 400px;
+    height: 300px;
     text-align: center;
     display: flex; 
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
 }
-footer img{ 
-    margin-top: 40px;
-    width: 250px;
+footer h1{
+    margin-top: 20px;
+    font-size: 35px;
+    font-family: Waylimo;
+    letter-spacing: 8px;
+}
+footer a{
+    text-decoration: none;
+    color: #000;
 }
 footer .footer-links{
     width: 90%;
