--- a/style.css
+++ b/style.css
@@ -425,6 +425,47 @@ main{
     font-family: Poppins-Regular;
     color: #0c0420;
 }
+.category-highlight{
+    background: #fff;
+    overflow-x: auto;
+    height: 150px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+.highlights-wrapper{
+    display: inline-flex;
+    gap: 20px;
+    box-sizing: border-box;
+    padding: 0 15px;
+}
+.highlights-container{
+    height: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.highlights-img-container{
+    width: 85px;
+    height: 85px;
+    background: ;
+    border-radius: 50%;
+    border: 2px solid #9F6496;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.highlights-img-wrapper{
+    width: 95%;
+    height: 95%;
+    border-radius: 50%;
+}
+.highlights-img-wrapper img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
 .new-arrivals-container{
     width: 100%;
     min-height: 500px;
